# pythonlabs

./: README.md  pyproject.toml  pytest.ini
scr/lab01/: ex05.py  доп
scr/lab02/: ex01.1.py  ex01.3.py  ex02.1.py  ex02.2.py  ex02.3.py
scr/lab03/: ex01.1.py  ex01.2.py  ex01.3.py  ex02.1.py
src/data/lab04/: input.txt  report.csv
src/data/lab08/: students_input.json  students_output.json
src/data/lab09/: students.csv
src/data/samples/: test.txt
src/lab01/: README.md  ex02.py  ex03.py  ex05.py
src/lab02/: README.md  ex01.1.py  ex01.2.py  ex01.3.py  ex02.1.py  ex02.2.py  ex02.3.py
src/lab03/: README.md  ex01.1.py  ex01.2.py  ex01.3.py  ex02.1.py
src/lab04/: READE.md  text_report.py
src/lab05/: README.md  csv_xlsx.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: models.py  serialize.py
src/lab09/: README.md  group.py  main.py
src/lab10/: README.md  demo.py  linked_list.py  structures.py
src/labs.egg-info/: PKG-INFO  SOURCES.txt
src/lib/: io_helpers.py  text.py
